Added basic lobbies and helpers. Cleaned up and refactored code.